--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -267,7 +267,9 @@
 <li>Klikn&#283;te na <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol></li>
 <li>Nyn&iacute; byste m&#283;li m&iacute;t d&iacute;l, kter&yacute; vypad&aacute; asi n&aacute;sledovn&#283; <b>Obr.: CC5</b>.</li></ol>
 <div style="clear:both"></div>
-<h2><span class="mw-headline" id="Sides">Sides</span></h2>
+<p><span id="Sides"></span>
+</p>
+<h2><span class="mw-headline" id="Strany">Strany</span></h2>
 <p>The sides are created in a similar manner, but instead of removing material we will add material with a <a href="../PartDesign_Pad.html" title="PartDesign Pad">pad</a> feature.
 </p><p><b><big>Sketch003</big></b>
 </p>
@@ -407,13 +409,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120194727
+Cached time: 20260120194804
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.282 seconds
-Real time usage: 1.352 seconds
-Preprocessor visited node count: 829/1000000
+CPU time usage: 0.288 seconds
+Real time usage: 0.420 seconds
+Preprocessor visited node count: 830/1000000
 Post&#8208;expand include size: 41772/2097152 bytes
 Template argument size: 11578/2097152 bytes
 Highest expansion depth: 5/100
@@ -423,19 +425,19 @@ Unstrip post&#8208;expand size: 2038/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  118.541      1 -total
- 22.37%   26.522      1 Template:PartDesign_Tools_navi/cs
- 21.50%   25.484      1 Template:Sketcher_Tools_navi/cs
- 17.73%   21.014      3 Template:Navigation_menu_2
- 13.23%   15.682      1 Template:Userdocnavi/cs
-  5.77%    6.837      7 Template:ComboBox
-  5.75%    6.819     19 Template:Button
-  5.41%    6.415      1 Template:TutorialInfo
-  5.25%    6.226      3 Template:CheckBox
-  4.21%    4.994      5 Template:Clear
+100.00%   45.611      1 -total
+ 26.55%   12.109      1 Template:Userdocnavi/cs
+ 22.28%   10.162      1 Template:PartDesign_Tools_navi/cs
+ 21.93%   10.003      3 Template:Navigation_menu_2
+ 15.92%    7.262      1 Template:Sketcher_Tools_navi/cs
+  5.53%    2.522      1 Template:TutorialInfo
+  4.86%    2.218      7 Template:ComboBox
+  4.40%    2.009      3 Template:CheckBox
+  4.23%    1.930      5 Template:Clear
+  3.72%    1.695     19 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120194726 and revision id 1741697. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120194804 and revision id 1741699. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
