--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -276,19 +276,19 @@
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Pd_tut_sk3_1.png&amp;filetimestamp=20221113151438&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_sk3_1.png" decoding="async" width="300" height="175" class="mw-file-element" data-file-width="301" data-file-height="176"></a><figcaption>Fig: SD1</figcaption></figure>
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Pd_tut_pad001.png&amp;filetimestamp=20221104171435&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_pad001.png" decoding="async" width="300" height="259" class="mw-file-element" data-file-width="381" data-file-height="329"></a><figcaption>Fig: SD2</figcaption></figure>
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Pd_tut_pad02-mir.png&amp;filetimestamp=20221104172504&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_pad02-mir.png" decoding="async" width="300" height="270" class="mw-file-element" data-file-width="364" data-file-height="327"></a><figcaption>Fig: SD3</figcaption></figure>
-<ol><li>Make sure <b>Sketch</b> is visible, and <b>Mirrored</b> is hidden.</li>
-<li>Click <span typeof="mw:File"><a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">Create sketch</a> and create a new sketch attached to the <b>XY_Plane</b>. The sketch will be named <b>Sketch003</b>.</li>
-<li>Click <span typeof="mw:File"><a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle"><img src="../File/Sketcher_CreateRectangle.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle">Create rectangle</a> and create a rectangle similar to the smaller rectangle in <b>Fig: SD1</b>. Because the rectangle is offset from the X axis this should not trigger an automatic <span typeof="mw:File"><a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject"><img src="../File/Sketcher_ConstrainPointOnObject.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject">Point onto object constraint</a>.</li>
-<li>Exit the tool.</li>
-<li>Click <span typeof="mw:File"><a href="../Sketcher_External.html" title="Sketcher External"><img src="../File/Sketcher_External.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_External.html" title="Sketcher External">External geometry</a>.</li>
-<li>Select the point <b>P1</b> as shown in <b>Fig: CC2</b> from <b>Sketch</b>.</li>
-<li>Exit the tool.</li>
-<li>Apply these constraints:
-<ol><li>Select one of the horizontal lines, apply a <span typeof="mw:File"><a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX"><img src="../File/Sketcher_ConstrainDistanceX.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">Horizontal distance constraint</a>, and assign a value of <b>7 mm</b>.</li>
-<li>Select one of the vertical lines, apply a <span typeof="mw:File"><a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY"><img src="../File/Sketcher_ConstrainDistanceY.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">Vertical distance constraint</a>, and assign this expression: <b><code>&lt;&lt;Sketch&gt;&gt;.Constraints.width</code></b>.</li>
-<li>Select the <b>top-left</b> point of the created rectangle (marked <b>TL</b> in <b>Fig: SD1</b>) and the newly added <b>external geometry point</b> and apply a <span typeof="mw:File"><a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident"><img src="../File/Sketcher_ConstrainCoincident.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident">Coincident constraint</a>.</li></ol></li>
-<li>The sketch should be fully constrained now.</li>
-<li>Click <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Close</span>.</li></ol>
+<ol><li>Ujist&#283;te se, &#382;e je viditeln&aacute; polo&#382;ka &bdquo;Sketch&ldquo; a skryt&aacute; polo&#382;ka &bdquo;Mirrored&ldquo;.</li>
+<li>Klikn&#283;te na <span typeof="mw:File"><a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">Vytvo&#345;it n&aacute;&#269;rt</a> a vytvo&#345;te nov&yacute; n&aacute;&#269;rt p&#345;ipojen&yacute; k <b>Rovin&#283;_XY</b>. N&aacute;&#269;rt bude pojmenov&aacute;n <b>Sketch003</b>.</li>
+<li>Klikn&#283;te na <span typeof="mw:File"><a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle"><img src="../File/Sketcher_CreateRectangle.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle">Vytvo&#345;it obd&eacute;ln&iacute;k</a> a vytvo&#345;te obd&eacute;ln&iacute;k podobn&yacute; men&scaron;&iacute;mu obd&eacute;ln&iacute;ku na <b>Obr.: SD1</b>. Proto&#382;e je obd&eacute;ln&iacute;k posunut&yacute; od osy X, nem&#283;lo by to spustit automatickou <span typeof="mw:File"><a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject"><img src="../File/Sketcher_ConstrainPointOnObject.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject">vazbu bodu na objektu</a>.</li>
+<li>Ukon&#269;ete n&aacute;stroj.</li>
+<li>Klikn&#283;te na <span typeof="mw:File"><a href="../Sketcher_External.html" title="Sketcher External"><img src="../File/Sketcher_External.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_External.html" title="Sketcher External">Extern&iacute; geometrie</a>.</li>
+<li>Vyberte bod <b>P1</b>, jak je zn&aacute;zorn&#283;no na <b>Obr.: CC2</b> ve <b>Sketch</b>.</li>
+<li>Ukon&#269;ete n&aacute;stroj.</li>
+<li>Pou&#382;ijte tyto vazby:
+<ol><li>Vyberte jednu z vodorovn&yacute;ch lini&iacute;, pou&#382;ijte <span typeof="mw:File"><a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX"><img src="../File/Sketcher_ConstrainDistanceX.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">Vazbu horizont&aacute;ln&iacute; vzd&aacute;lenosti</a> a p&#345;i&#345;a&#271;te hodnotu <b>7 mm</b>.</li>
+<li>Vyberte jednu ze svisl&yacute;ch lini&iacute;, pou&#382;ijte <span typeof="mw:File"><a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY"><img src="../File/Sketcher_ConstrainDistanceY.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">Vazbu vertik&aacute;ln&iacute; vzd&aacute;lenosti</a> a p&#345;i&#345;a&#271;te tento v&yacute;raz: <b><code>&lt;&lt;Sketch&gt;&gt;.Constraints.sirka</code></b>.</li>
+<li>Vyberte bod v <b>lev&eacute;m horn&iacute;m</b> rohu vytvo&#345;en&eacute;ho obd&eacute;ln&iacute;ku (ozna&#269;en&yacute; jako <b>TL</b> na <b>Obr.: SD1</b>) a nov&#283; p&#345;idan&yacute; bod vn&#283;j&scaron;&iacute; geometrie a pou&#382;ijte vazbu <span typeof="mw:File"><a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident"><img src="../File/Sketcher_ConstrainCoincident.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident">vazbu toto&#382;nosti</a>.</li></ol></li>
+<li>N&aacute;&#269;rt by nyn&iacute; m&#283;l b&yacute;t zcela zavazben.</li>
+<li>Klikn&#283;te na <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Zav&#345;&iacute;t</span>.</li></ol>
 <p><b><big>Pad001</big></b>
 </p>
 <ol><li>Select <b>Sketch003</b>.</li>
@@ -409,15 +409,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120194933
+Cached time: 20260120202643
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.244 seconds
-Real time usage: 0.303 seconds
+CPU time usage: 0.259 seconds
+Real time usage: 0.419 seconds
 Preprocessor visited node count: 830/1000000
-Post&#8208;expand include size: 41772/2097152 bytes
-Template argument size: 11578/2097152 bytes
+Post&#8208;expand include size: 41775/2097152 bytes
+Template argument size: 11581/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -425,19 +425,19 @@ Unstrip post&#8208;expand size: 2038/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.994      1 -total
- 20.68%    7.445      1 Template:Sketcher_Tools_navi/cs
- 18.57%    6.683      1 Template:PartDesign_Tools_navi/cs
- 16.68%    6.003      3 Template:Navigation_menu_2
- 14.31%    5.150      3 Template:CheckBox
- 11.38%    4.097      1 Template:Userdocnavi/cs
-  6.36%    2.291      1 Template:TutorialInfo
-  5.38%    1.935      7 Template:ComboBox
-  5.30%    1.906     19 Template:Button
-  5.15%    1.852      5 Template:Clear
+100.00%   42.381      1 -total
+ 25.60%   10.849      1 Template:PartDesign_Tools_navi/cs
+ 21.84%    9.255      1 Template:Sketcher_Tools_navi/cs
+ 18.14%    7.687      3 Template:Navigation_menu_2
+ 13.65%    5.786      1 Template:Userdocnavi/cs
+  6.97%    2.953      1 Template:TutorialInfo
+  6.37%    2.699      3 Template:CheckBox
+  5.94%    2.516      7 Template:ComboBox
+  4.53%    1.920      5 Template:Clear
+  3.62%    1.533     19 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120194933 and revision id 1741701. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120202642 and revision id 1741704. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
