--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -440,27 +440,25 @@ Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er au
 <p>Bestimmte Parameter sind in den Parametern von FreeCAD verf&uuml;gbar, siehe: <b>Men&uuml; &rarr; Werkzeuge &rarr; Parameter bearbeiten</b>
 </p>
 <ul><li>Benutzerparameter: BaseApp/Preferences/Macros/FCMmacros/FCCircularText</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><ul><li><code>switchModeTextList</code>&nbsp;:
-<ul><li><code>false</code> normal text mode (and black) turns off switchFontComBox</li>
-<li><code>true</code> allow switchFontComBox 1 (default)</li></ul></li>
+<ul><li><code>false</code> Normaler Textmodus (und schwarz) deaktiviert switchFontComBox</li>
+<li><code>true</code> erlaubt switchFontComBox 1 (Standard)</li></ul></li>
 <li><code>switchFontComBox</code>&nbsp;:
-<ul><li><code>false</code> (and switchModeTextList = 1) text mode (in color) in Faster ComboBox list (default)</li>
-<li><code>true</code> (and switchModeTextList = 1) font Family in ComboBox list slower but more beautiful!</li></ul></li>
+<ul><li><code>false</code> (und switchModeTextList = 1) Textmodus (in Farbe) in Faster ComboBox-Liste (Standard)</li>
+<li><code>true</code> (und switchModeTextList = 1) Schriftart in ComboBox-Liste, langsamer aber sch&ouml;ner!</li></ul></li>
 <li><code>setSystemFonts</code>&nbsp;:
-<ul><li><code>false</code> matplotlib.font_manager.findSystemFonts ("C: /", "ttf") do all fonts (in all folders and subfolders of the HD) time&nbsp;!!</li>
-<li><code>true</code> fontman.findSystemFonts (self.pathFont)<br>make all the fonts in the directory (and in all the subfolders) (default)</li></ul></li>
-<li><code>seTtextAlignement</code>&nbsp;: 0 = AlignLeft (default) 1 = AlignCenter 2 = AlignRight</li>
-<li><code>setFontByDefault</code>&nbsp;: Font by Default (the last used)</li>
-<li><code>switchResetFALSE</code>&nbsp;: <code>false</code> reset (default), <code>true</code> no reset (not recommended) some switches can stay open or close unexpectedly!</li>
+<ul><li><code>false</code> matplotlib.font_manager.findSystemFonts ("C: /", "ttf") Alle Schriftarten (in allen Ordnern und Unterordnern der Festplatte) bearbeiten!</li>
+<li><code>true</code> fontman.findSystemFonts (self.pathFont)<br>alle Schriftarten im Verzeichnis (und in allen Unterordnern) erstellen (Standard)</li></ul></li>
+<li><code>seTtextAlignement</code>&nbsp;: 0 = AlignLeft (Standard) 1 = AlignCenter 2 = AlignRight</li>
+<li><code>setFontByDefault</code>&nbsp;: Standardschriftart (die zuletzt verwendete)</li>
+<li><code>switchResetFALSE</code>&nbsp;: <code>false</code> zur&uuml;cksetzen (Standard), <code>true</code> nicht. zur&uuml;cksetzen (nicht empfohlen) Einige Schalter k&ouml;nnen unerwartet offen oder geschlossen bleiben!</li>
 <li><code>setPathOrthogonal</code>&nbsp;: <code>true</code> <code>false</code></li>
 <li><code>setPathTangent</code>&nbsp;: <code>true</code> <code>false</code></li>
 <li><code>setPositionBase</code>&nbsp;: <code>true</code> <code>false</code></li>
 <li><code>setPositionCenter</code>&nbsp;: <code>true</code> <code>false</code></li>
 <li><code>setPositionTop</code>&nbsp;: <code>true</code> <code>false</code></li>
 <li><code>switchVersionSearch</code>&nbsp;: <code>true</code> <code>false</code></li>
-<li><code>Version</code>&nbsp;: FCCircularText version</li></ul></li></ul>
-</div>
+<li><code>Version</code>&nbsp;: FCCircularText-Version</li></ul></li></ul>
 <p>Den Makroordner <b>FcString</b> f&uuml;r erstellte Zeichen und eine Datei <b>FcClock</b> f&uuml;r erstellte Uhren starten.
 </p><p><span id="Script"></span>
 </p>
@@ -954,13 +952,13 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120051413
+Cached time: 20260121044254
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.384 seconds
-Real time usage: 0.549 seconds
-Preprocessor visited node count: 1587/1000000
+CPU time usage: 0.438 seconds
+Real time usage: 1.298 seconds
+Preprocessor visited node count: 1586/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
@@ -970,19 +968,19 @@ Unstrip post&#8208;expand size: 66650/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  341.138      1 -total
-  3.98%   13.593      1 Template:Draft_Tools_navi/de
-  2.13%    7.268      2 Template:Navigation_menu_2
-  1.66%    5.673      7 Template:RadioButton
-  1.50%    5.101     10 Template:Code
-  1.13%    3.859      1 Template:Userdocnavi/de
-  1.10%    3.755      1 Template:Macro/de
-  1.07%    3.656     10 Template:CheckBox
-  1.05%    3.572      3 Template:ColoredText
-  0.72%    2.470      1 Template:Codeextralink
+100.00% 1056.623      1 -total
+ 55.43%  585.697     10 Template:Code
+  0.82%    8.624      1 Template:Draft_Tools_navi/de
+  0.69%    7.268      7 Template:RadioButton
+  0.55%    5.857     14 Template:TRUE
+  0.46%    4.907      1 Template:MenuCommand
+  0.44%    4.640     10 Template:CheckBox
+  0.41%    4.372     22 Template:Button
+  0.40%    4.253      1 Template:Macro/de
+  0.39%    4.145     18 Template:FALSE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260120051413 and revision id 1741483. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121044252 and revision id 1741742. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
