--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -71,8 +71,9 @@
 </p>
 <h3><span id=".D0.91.D1.8F.D0.BB.D0.B0_.D0.BE.D1.82.D0.BC.D0.B5.D1.82.D0.BA.D0.B0_.D0.BD.D0.B0_.D1.81.D0.B8.D0.BD_.D1.84.D0.BE.D0.BD"></span><span class="mw-headline" id="&#1041;&#1103;&#1083;&#1072;_&#1086;&#1090;&#1084;&#1077;&#1090;&#1082;&#1072;_&#1085;&#1072;_&#1089;&#1080;&#1085;_&#1092;&#1086;&#1085;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_recompute.png&amp;filetimestamp=20240413194537&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_recompute.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> &#1041;&#1103;&#1083;&#1072; &#1086;&#1090;&#1084;&#1077;&#1090;&#1082;&#1072; &#1085;&#1072; &#1089;&#1080;&#1085; &#1092;&#1086;&#1085;</span></h3>
 <p>&#1058;&#1086;&#1074;&#1072; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072;, &#1095;&#1077; &#1086;&#1073;&#1077;&#1082;&#1090;&#1098;&#1090; &#1090;&#1088;&#1103;&#1073;&#1074;&#1072; &#1076;&#1072; &#1073;&#1098;&#1076;&#1077; &#1087;&#1088;&#1077;&#1080;&#1079;&#1095;&#1080;&#1089;&#1083;&#1077;&#1085; (<a href="../Std_Refresh.html" title="Std Refresh">recomputed</a>), &#1087;&#1086;&#1088;&#1072;&#1076;&#1080; &#1087;&#1088;&#1086;&#1084;&#1077;&#1085;&#1080;, &#1085;&#1072;&#1087;&#1088;&#1072;&#1074;&#1077;&#1085;&#1080; &#1074; &#1084;&#1086;&#1076;&#1077;&#1083;&#1072; &#1080;&#1083;&#1080; &#1079;&#1072;&#1097;&#1086;&#1090;&#1086; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1103;&#1090; &#1077; &#1084;&#1072;&#1088;&#1082;&#1080;&#1088;&#1072;&#1083; &#1086;&#1073;&#1077;&#1082;&#1090;&#1072; &#1074; &#1082;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086;&#1090;&#1086; &#1084;&#1077;&#1085;&#1102; &#1085;&#1072; &#1076;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1085;&#1080;&#1103; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;, &#1076;&#1072; &#1073;&#1098;&#1076;&#1077; &#1087;&#1088;&#1077;&#1080;&#1079;&#1095;&#1080;&#1089;&#1083;&#1077;&#1085;. &#1042; &#1087;&#1086;&#1074;&#1077;&#1095;&#1077;&#1090;&#1086; &#1089;&#1083;&#1091;&#1095;&#1072;&#1080; &#1087;&#1088;&#1077;&#1080;&#1079;&#1095;&#1080;&#1089;&#1083;&#1103;&#1074;&#1072;&#1085;&#1077;&#1090;&#1086; &#1089;&#1077; &#1079;&#1072;&#1076;&#1077;&#1081;&#1089;&#1090;&#1074;&#1072; &#1072;&#1074;&#1090;&#1086;&#1084;&#1072;&#1090;&#1080;&#1095;&#1085;&#1086;, &#1085;&#1086; &#1087;&#1086;&#1085;&#1103;&#1082;&#1086;&#1075;&#1072; &#1089;&#1077; &#1079;&#1072;&#1073;&#1072;&#1074;&#1103; &#1087;&#1086; &#1087;&#1088;&#1080;&#1095;&#1080;&#1085;&#1080;, &#1089;&#1074;&#1098;&#1088;&#1079;&#1072;&#1085;&#1080; &#1089; &#1087;&#1088;&#1086;&#1080;&#1079;&#1074;&#1086;&#1076;&#1080;&#1090;&#1077;&#1083;&#1085;&#1086;&#1089;&#1090;&#1090;&#1072;.
+</p><p><span id="File:FreeCAD_Tree_view_error.png_White_exclamation_mark_on_red_background"></span>
 </p>
-<h3><span class="mw-headline" id="White_exclamation_mark_on_red_background"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_error.png&amp;filetimestamp=20240413200438&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_error.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> White exclamation mark on red background</span></h3>
+<h3><span id=".D0.91.D1.8F.D0.BB_.D0.B2.D1.8A.D0.B7.D0.BA.D0.BB.D0.B8.D1.86.D0.B0.D1.82.D0.B5.D0.BB.D0.B5.D0.BD_.D0.B7.D0.BD.D0.B0.D0.BA_.D0.BD.D0.B0_.D1.87.D0.B5.D1.80.D0.B2.D0.B5.D0.BD_.D1.84.D0.BE.D0.BD"></span><span class="mw-headline" id="&#1041;&#1103;&#1083;_&#1074;&#1098;&#1079;&#1082;&#1083;&#1080;&#1094;&#1072;&#1090;&#1077;&#1083;&#1077;&#1085;_&#1079;&#1085;&#1072;&#1082;_&#1085;&#1072;_&#1095;&#1077;&#1088;&#1074;&#1077;&#1085;_&#1092;&#1086;&#1085;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_error.png&amp;filetimestamp=20240413200438&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_error.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> &#1041;&#1103;&#1083; &#1074;&#1098;&#1079;&#1082;&#1083;&#1080;&#1094;&#1072;&#1090;&#1077;&#1083;&#1077;&#1085; &#1079;&#1085;&#1072;&#1082; &#1085;&#1072; &#1095;&#1077;&#1088;&#1074;&#1077;&#1085; &#1092;&#1086;&#1085;</span></h3>
 <p>This indicates that the object has an error that needs to be fixed. After recomputing the whole document a tooltip describing the error is shown when you hover the mouse over the object in the Tree View. Note: All other objects depending on an object in such an error state will not be properly recomputed, thus they may still show some old state.
 </p>
 <h3><span class="mw-headline" id="Purple_chain_link"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_unattached.png&amp;filetimestamp=20240413200053&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_unattached.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Purple chain link</span></h3>
@@ -166,13 +167,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121051408
+Cached time: 20260121051557
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.128 seconds
-Real time usage: 0.163 seconds
-Preprocessor visited node count: 755/1000000
+CPU time usage: 0.139 seconds
+Real time usage: 0.193 seconds
+Preprocessor visited node count: 756/1000000
 Post&#8208;expand include size: 38475/2097152 bytes
 Template argument size: 12431/2097152 bytes
 Highest expansion depth: 7/100
@@ -182,19 +183,19 @@ Unstrip post&#8208;expand size: 2222/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.368      1 -total
- 24.16%    8.544      1 Template:Std_Base_navi/bg
- 20.57%    7.276      3 Template:Navigation_menu_2
- 15.22%    5.382      1 Template:Userdocnavi/bg
- 14.17%    5.010      1 Template:Interface_navi/bg
- 10.03%    3.546      2 Template:PropertyData
-  6.34%    2.242      3 Template:Variable
-  5.11%    1.807     19 Template:KEY
-  4.80%    1.699      1 Template:PropertyView
-  4.67%    1.653      2 Template:Caption
+100.00%   51.443      1 -total
+ 23.48%   12.077      1 Template:Std_Base_navi/bg
+ 22.16%   11.400      1 Template:Interface_navi/bg
+ 18.65%    9.593      3 Template:Navigation_menu_2
+ 11.51%    5.923      1 Template:Userdocnavi/bg
+  9.29%    4.777      2 Template:PropertyData
+  5.16%    2.652      2 Template:Caption
+  5.06%    2.605      3 Template:Variable
+  4.50%    2.315      1 Template:FALSE
+  4.28%    2.204      1 Template:PropertyView
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260121051408 and revision id 1741757. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260121051557 and revision id 1741759. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
