--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -78,7 +78,7 @@
 </p><p><span id="File:FreeCAD_Tree_view_unattached.png_Purple_chain_link"></span>
 </p>
 <h3><span id=".D0.9B.D0.B8.D0.BB.D0.B0.D0.B2.D0.B0_.D0.B2.D0.B5.D1.80.D0.B8.D0.B6.D0.BD.D0.B0_.D0.B2.D1.80.D1.8A.D0.B7.D0.BA.D0.B0"></span><span class="mw-headline" id="&#1051;&#1080;&#1083;&#1072;&#1074;&#1072;_&#1074;&#1077;&#1088;&#1080;&#1078;&#1085;&#1072;_&#1074;&#1088;&#1098;&#1079;&#1082;&#1072;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_unattached.png&amp;filetimestamp=20240413200053&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_unattached.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> &#1051;&#1080;&#1083;&#1072;&#1074;&#1072; &#1074;&#1077;&#1088;&#1080;&#1078;&#1085;&#1072; &#1074;&#1088;&#1098;&#1079;&#1082;&#1072;</span></h3>
-<p>This is typically shown for <a href="../Sketch.html" title="Sketch">sketches</a>, <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign</a> primitives, such as box, cylinder, etc. and <a href="../Datum.html" title="Datum">Datum</a> geometry. It indicates that the object is not attached to anything. It has no Attachment Offset and gets its position and alignment solely from its <a href="../Placement.html" title="Placement">Placement</a> property.
+<p>&#1058;&#1086;&#1074;&#1072; &#1086;&#1073;&#1080;&#1082;&#1085;&#1086;&#1074;&#1077;&#1085;&#1086; &#1089;&#1077; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1079;&#1072; &#1089;&#1082;&#1080;&#1094;&#1080; (<a href="../Sketch.html" title="Sketch">sketches</a>), &#1087;&#1088;&#1080;&#1084;&#1080;&#1090;&#1080;&#1074;&#1080; &#1086;&#1090; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1072; &#1084;&#1072;&#1089;&#1072; <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign</a>, &#1082;&#1072;&#1090;&#1086; &#1082;&#1091;&#1090;&#1080;&#1103;, &#1094;&#1080;&#1083;&#1080;&#1085;&#1076;&#1098;&#1088; &#1080; &#1090;.&#1085;. &#1080; &#1075;&#1077;&#1086;&#1084;&#1077;&#1090;&#1088;&#1080;&#1103; <a href="../Datum.html" title="Datum">Datum</a>. &#1058;&#1086;&#1074;&#1072; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072;, &#1095;&#1077; &#1086;&#1073;&#1077;&#1082;&#1090;&#1098;&#1090; &#1085;&#1077; &#1077; &#1087;&#1088;&#1080;&#1082;&#1088;&#1077;&#1087;&#1077;&#1085; &#1082;&#1098;&#1084; &#1085;&#1080;&#1097;&#1086;. &#1058;&#1086;&#1081; &#1085;&#1103;&#1084;&#1072; &#1086;&#1090;&#1084;&#1077;&#1089;&#1090;&#1077;&#1085; &#1087;&#1088;&#1080;&#1082;&#1072;&#1095;&#1077;&#1085; &#1092;&#1072;&#1081;&#1083; &#1080; &#1087;&#1086;&#1083;&#1091;&#1095;&#1072;&#1074;&#1072; &#1089;&#1074;&#1086;&#1103;&#1090;&#1072; &#1087;&#1086;&#1079;&#1080;&#1094;&#1080;&#1103; &#1080; &#1087;&#1086;&#1076;&#1088;&#1072;&#1074;&#1085;&#1103;&#1074;&#1072;&#1085;&#1077; &#1077;&#1076;&#1080;&#1085;&#1089;&#1090;&#1074;&#1077;&#1085;&#1086; &#1086;&#1090; &#1089;&#1074;&#1086;&#1077;&#1090;&#1086; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1086; <a href="../Placement.html" title="Placement">Placement</a>.
 </p><p>There is a <a href="../Basic_Attachment_Tutorial.html" title="Basic Attachment Tutorial">Basic Attachment Tutorial</a> explaining how to handle such objects.
 </p>
 <h3><span class="mw-headline" id="Yellow_X"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_notfullyconstrained.png&amp;filetimestamp=20240413195703&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_notfullyconstrained.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Yellow X</span></h3>
@@ -168,12 +168,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121052216
+Cached time: 20260121052622
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.116 seconds
-Real time usage: 0.161 seconds
+CPU time usage: 0.157 seconds
+Real time usage: 0.349 seconds
 Preprocessor visited node count: 757/1000000
 Post&#8208;expand include size: 38475/2097152 bytes
 Template argument size: 12431/2097152 bytes
@@ -184,19 +184,19 @@ Unstrip post&#8208;expand size: 2222/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.719      1 -total
- 21.20%    7.785      1 Template:Std_Base_navi/bg
- 18.08%    6.640      3 Template:Navigation_menu_2
- 13.93%    5.115      1 Template:Interface_navi/bg
- 12.36%    4.537      1 Template:Userdocnavi/bg
- 10.93%    4.012      2 Template:PropertyData
-  9.90%    3.634      5 Template:Version
-  7.27%    2.670      3 Template:Variable
-  5.50%    2.021      1 Template:PropertyView
-  5.09%    1.869     19 Template:KEY
+100.00%   89.162      1 -total
+ 34.44%   30.703      1 Template:Interface_navi/bg
+ 27.93%   24.903      1 Template:Std_Base_navi/bg
+ 23.04%   20.542      3 Template:Navigation_menu_2
+  6.75%    6.015      1 Template:Userdocnavi/bg
+  6.12%    5.455      1 Template:TOCright
+  6.00%    5.351      2 Template:PropertyData
+  3.95%    3.520      2 Template:Caption
+  3.09%    2.756      1 Template:PropertyView
+  2.85%    2.538      3 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260121052215 and revision id 1741763. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260121052622 and revision id 1741765. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
