--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -79,7 +79,7 @@
 </p>
 <h3><span id=".D0.9B.D0.B8.D0.BB.D0.B0.D0.B2.D0.B0_.D0.B2.D0.B5.D1.80.D0.B8.D0.B6.D0.BD.D0.B0_.D0.B2.D1.80.D1.8A.D0.B7.D0.BA.D0.B0"></span><span class="mw-headline" id="&#1051;&#1080;&#1083;&#1072;&#1074;&#1072;_&#1074;&#1077;&#1088;&#1080;&#1078;&#1085;&#1072;_&#1074;&#1088;&#1098;&#1079;&#1082;&#1072;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_unattached.png&amp;filetimestamp=20240413200053&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_unattached.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> &#1051;&#1080;&#1083;&#1072;&#1074;&#1072; &#1074;&#1077;&#1088;&#1080;&#1078;&#1085;&#1072; &#1074;&#1088;&#1098;&#1079;&#1082;&#1072;</span></h3>
 <p>&#1058;&#1086;&#1074;&#1072; &#1086;&#1073;&#1080;&#1082;&#1085;&#1086;&#1074;&#1077;&#1085;&#1086; &#1089;&#1077; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1079;&#1072; &#1089;&#1082;&#1080;&#1094;&#1080; (<a href="../Sketch.html" title="Sketch">sketches</a>), &#1087;&#1088;&#1080;&#1084;&#1080;&#1090;&#1080;&#1074;&#1080; &#1086;&#1090; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1072; &#1084;&#1072;&#1089;&#1072; <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign</a>, &#1082;&#1072;&#1090;&#1086; &#1082;&#1091;&#1090;&#1080;&#1103;, &#1094;&#1080;&#1083;&#1080;&#1085;&#1076;&#1098;&#1088; &#1080; &#1090;.&#1085;. &#1080; &#1075;&#1077;&#1086;&#1084;&#1077;&#1090;&#1088;&#1080;&#1103; <a href="../Datum.html" title="Datum">Datum</a>. &#1058;&#1086;&#1074;&#1072; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072;, &#1095;&#1077; &#1086;&#1073;&#1077;&#1082;&#1090;&#1098;&#1090; &#1085;&#1077; &#1077; &#1087;&#1088;&#1080;&#1082;&#1088;&#1077;&#1087;&#1077;&#1085; &#1082;&#1098;&#1084; &#1085;&#1080;&#1097;&#1086;. &#1058;&#1086;&#1081; &#1085;&#1103;&#1084;&#1072; &#1086;&#1090;&#1084;&#1077;&#1089;&#1090;&#1077;&#1085; &#1087;&#1088;&#1080;&#1082;&#1072;&#1095;&#1077;&#1085; &#1092;&#1072;&#1081;&#1083; &#1080; &#1087;&#1086;&#1083;&#1091;&#1095;&#1072;&#1074;&#1072; &#1089;&#1074;&#1086;&#1103;&#1090;&#1072; &#1087;&#1086;&#1079;&#1080;&#1094;&#1080;&#1103; &#1080; &#1087;&#1086;&#1076;&#1088;&#1072;&#1074;&#1085;&#1103;&#1074;&#1072;&#1085;&#1077; &#1077;&#1076;&#1080;&#1085;&#1089;&#1090;&#1074;&#1077;&#1085;&#1086; &#1086;&#1090; &#1089;&#1074;&#1086;&#1077;&#1090;&#1086; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1086; <a href="../Placement.html" title="Placement">Placement</a>.
-</p><p>There is a <a href="../Basic_Attachment_Tutorial.html" title="Basic Attachment Tutorial">Basic Attachment Tutorial</a> explaining how to handle such objects.
+</p><p>&#1048;&#1084;&#1072; <a href="../Basic_Attachment_Tutorial.html" title="Basic Attachment Tutorial">Basic Attachment Tutorial</a>, &#1086;&#1073;&#1103;&#1089;&#1085;&#1103;&#1074;&#1072;&#1097; &#1082;&#1072;&#1082; &#1076;&#1072; &#1089;&#1077; &#1089;&#1087;&#1088;&#1072;&#1074;&#1103;&#1090;&#1077; &#1089; &#1090;&#1072;&#1082;&#1080;&#1074;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;.
 </p>
 <h3><span class="mw-headline" id="Yellow_X"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_notfullyconstrained.png&amp;filetimestamp=20240413195703&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_notfullyconstrained.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Yellow X</span></h3>
 <p>This is only used for <a href="../Sketch.html" title="Sketch">sketches</a> and indicates that the sketch is not fully constrained. If the sketch is in <a href="../Sketcher_EditSketch.html" title="Sketcher EditSketch">edit mode</a> the number of remaining degrees of freedom is shown in the <a href="../Sketcher_Dialog.html#Solver_messages" title="Sketcher Dialog">solver messages</a>.
@@ -168,12 +168,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121052622
+Cached time: 20260121052716
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.157 seconds
-Real time usage: 0.349 seconds
+CPU time usage: 0.146 seconds
+Real time usage: 0.237 seconds
 Preprocessor visited node count: 757/1000000
 Post&#8208;expand include size: 38475/2097152 bytes
 Template argument size: 12431/2097152 bytes
@@ -184,19 +184,19 @@ Unstrip post&#8208;expand size: 2222/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   89.162      1 -total
- 34.44%   30.703      1 Template:Interface_navi/bg
- 27.93%   24.903      1 Template:Std_Base_navi/bg
- 23.04%   20.542      3 Template:Navigation_menu_2
-  6.75%    6.015      1 Template:Userdocnavi/bg
-  6.12%    5.455      1 Template:TOCright
-  6.00%    5.351      2 Template:PropertyData
-  3.95%    3.520      2 Template:Caption
-  3.09%    2.756      1 Template:PropertyView
-  2.85%    2.538      3 Template:Variable
+100.00%   52.120      1 -total
+ 26.00%   13.551      1 Template:Std_Base_navi/bg
+ 24.67%   12.856      3 Template:Navigation_menu_2
+ 17.04%    8.882      1 Template:Userdocnavi/bg
+ 14.91%    7.772      1 Template:Interface_navi/bg
+  7.73%    4.030      6 Template:MenuCommand
+  7.56%    3.939      2 Template:PropertyData
+  4.47%    2.329      2 Template:Caption
+  4.23%    2.206      1 Template:PropertyView
+  4.12%    2.150      3 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260121052622 and revision id 1741765. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260121052715 and revision id 1741767. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
